--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@mui-treasury/styles": "^1.13.0",
         "@testing-library/jest-dom": "^5.11.5",
         "@testing-library/react": "^11.1.1",
         "@testing-library/user-event": "^12.2.0",
         "axios": "^0.21.0",
+        "bootstrap": "^4.5.3",
+        "dotenv": "^8.2.0",
         "history": "^4.10.1",
         "material-ui-search-bar": "^1.0.0",
         "react": "^17.0.1",
+        "react-bootstrap": "^1.4.0",
         "react-dom": "^17.0.1",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.0"
+        "react-scripts": "4.0.0",
+        "styled-components": "^5.2.1"
     },
     "scripts": {
         "start": "react-scripts start",
